# Sparkle

./: CMakeLists.txt
Sparkle/: SUBasicUpdateDriver.m  SUBinaryDeltaTool.m  SUPlainInstaller.m  SUSporkelUnarchiver.h  SUSporkelUnarchiver.m  SUUpdater.h
Sparkle.xcodeproj/: project.pbxproj
